--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,19 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nhrnni253/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nhrnni253/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727128.md#1" target="_blank">孙小果涉黑案二审仍判25年 其母获刑20年</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727128.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/15a3384fe6b59efe_ttl7daypku_12-150x120.jpg" align ="left"></a>12月17日，云南昆明恶霸孙小果等13人组织、领导、参加黑社会性质组织等犯罪一案二审维持原判。而孙小果20多年前所犯案，将近期宣判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11724254.md#1" target="_blank">艺人杜汶泽寄语：香港的未来属于年轻人</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11724254.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-05_16-24-05-150x120.jpg" align ="left"></a>香港人的民主抗争已逾半年，自从区议会选举民主派大胜之后，有一种观点认为，似乎香港的局势有所缓和。对此，艺人杜汶泽在facebook（fb）藉旺角表行近期发生五宗劫案，提醒港人不要忘记五大诉求，并寄语：“香港的未来属于年轻人。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727104.md#1" target="_blank">受天气影响 大陆11省逾百条高速路被封闭</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727104.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188987959-150x120.jpg" align ="left"></a>大陆多地因受雨雪天气、大雾天气影响，12月17日早上，山西、辽宁、黑龙江、天津、河北、山西、山东、河南、重庆11省内共逾百条高速路被封闭。此外，黑龙江哈尔滨机场16日至17日早上曾一度关闭机场跑道。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11726967.md#1" target="_blank">大陆逾30城二手房价连跌两月 专家：拐点出现</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11726967.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/1406082202201528-600x400-150x120.jpg" align ="left"></a>中共官方12月16日的消息显示，今年11月份，在大陆70个大中城市中，有33个城市的二手房价格环比下跌，这也是连续两个月超过30个城市二手房价格出现下跌。有业界人士认为，此举显示大陆楼市已经出现了拐点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:07 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727053.md#1" target="_blank">中共继续减持美债 外汇储备亦下跌</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727053.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/02/1002190147381459-150x120.jpg" align ="left"></a>美国财政部公布，中国10月持有美债规模降至1.1万亿美元，按月下降8亿美元，自2018年1月以来，减少了666亿美元，也是连续4个月减持。11月，中国外汇储备下降95.7亿美元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 10:57 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11722643.md#1" target="_blank">替中共站台 港府高层军心涣散人人自危</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11722643.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1909040415172188-600x400-150x120.jpg" align ="left"></a>12月16日，香港特首林郑月娥前往北京述职，会见了习近平。与此同时，民调显示港府高层在香港民间的支持率极低。此前多有报道指，港府高层多想辞任，但由种种原因，不得不继续为中共站台。目前这些官员人人自危，压力来自中共、香港民间及美国等国家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 10:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726874.md#1" target="_blank">报告：华为向至少50国输出AI监控技术</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726874.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-826000302-150x120.jpg" align ="left"></a>美国智囊机构一份最新报告显示，中国公司已经向包括伊朗、缅甸、委内瑞拉、津巴布韦和其它人权记录不佳的60多个国家出口人工智能（AI）监视技术，其中华为公司向至少50个国家出售AI监视技术。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726882.md#1" target="_blank">明年更多债务到期 中共地方政府陷危机</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726882.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/12/1307301530281657-150x120.jpg" align ="left"></a>近日有统计显示，2020年地方债和城投债的到期量均有所增加，加上地方财政收入下降，2020年中共各地方政府的还债压力进一步加大，债务违约风险增加。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 8:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725904.md#1" target="_blank">新闻传媒界法轮功学员遭中共迫害综述（上）</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725904.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-9-150x120.jpg" align ="left"></a>中共自1999年迫害法轮功以来，把新闻媒体作为散布谎言的工具迷惑百姓、维持打压，并对在中国新闻传媒系统就职的法轮功学员进行残酷的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726835.md#1" target="_blank">库德洛：第一阶段协议 知识产权占很大章节</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726835.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LX2NM-1-150x120.jpg" align ="left"></a>白宫首席经济顾问拉里·库德洛（Larry Kudlow）周一（12月16日）在接受福克斯新闻采访时，针对美中第一阶段贸易协议中知识产权部分做了解答。他表示，保护知识产权问题占据了协议的一个大章节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726762.md#1" target="_blank">中共“一胎化”效应：老得快 养老难</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726762.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-73837087-600x400-150x120.jpg" align ="left"></a>“一胎化政策”下，大陆独生子女的人数高达1.76亿。在第一代独生子女步入中年之际，可能面临独自赡养父母俩老的焦虑及压力与日俱增。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726430.md#1" target="_blank">何韵诗林聪合唱新歌 《夜行》勉励港人不放弃</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726430.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911280828532478-150x120.jpg" align ="left"></a>一直支持香港民主运动的歌手何韵诗，日前与旗下唱作新人林聪合唱新歌《夜行》。歌曲再现了港人逾半年的艰苦抗争，也勉励抗争者“荣光中不放弃”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726478.md#1" target="_blank">中共参军许进不许出 一大学生退伍遭重罚</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726478.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/10/1312231116562320-150x120.jpg" align ="left"></a>美国媒体周一（12月16日）报导，中共参军许进不许出，一位执意退出军队的大学生遭受重罚之事。报导指出，中国（中共）军队中有约200万名士兵，但很难想像因无法忍受严苛军事生活、选择退出的一个个案却在中国国内引发全民关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726623.md#1" target="_blank">拟高价买下高以翔遗作 浙江卫视遭剧作方拒绝</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726623.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1604100956401487-150x120.jpg" align ="left"></a>35岁的台湾艺人高以翔在大陆录制浙江卫视的综艺节目骤逝后，追思会于12月15日在台北殡仪馆举行，许多亲友到场送他最后一程，场面哀戚。其遗作《怪你过分美丽》的出品方“恒星引力”CEO在微博发文悼念时，高以翔的粉丝留言请求不要卖新剧给浙江卫视，该CEO回复“不会的”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726774.md#1" target="_blank">爆料：港惩教署精神病院押送大批“犯人”</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726774.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/9fd135e6c3413e282970338692a56144-150x120.jpg" align ="left"></a>12月16日，有消息人士向《大纪元时报》爆料，指小榄精神病治疗中心扩建的同时，连日来至少见证两次在附近大规模封路、戒严，同时押送犯人，每次时间长达半个钟头，其中有被封闭得密不透风的警车散发出极为刺鼻、类似腐肉臭味，疑有被拘捕的“反送中”抗争者被送入精神病院注射“懵仔针”，以及有“犯人”在精神病院被弄死后秘密送走。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726708.md#1" target="_blank">709律师李春富遭边控 质问当局怕什么</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726708.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/DBx3xzJU0AAdTez-150x120.jpeg" align ="left"></a>12月16日，大陆维权律师李春富对外发布消息说，他在云南景洪口岸遭到中共警方拦截，被限制出境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726651.md#1" target="_blank">11月房价下跌城市再增 京广二手房续跌</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726651.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1411080052482663-600x400-1-150x120.jpg" align ="left"></a>中共国家统计局12月16日公布数据显示，11月份新建和二手商品住宅价格下跌的城市数量继续增加、价格上涨城市继续减少。中国房企年末为了销量纷纷降价售房，北京甚至出现20%的降幅，但实际销售量仍然不佳。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726553.md#1" target="_blank">习近平和李克强见林郑 出现三大变化</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726553.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/lkq-linzhengyuee-150x120.jpg" align ="left"></a>香港特首进京向习近平、李克强述职时，出现三大变化。除习近平的讲话内容、陪同会见的人员有变化外，李克强会见特首时的地点也有变化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:43 AM							</td></tr>
@@ -10,30 +25,9 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726617.md#1" target="_blank">中共走投无路 军队押送“中美协议”过关</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726617.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LC4OY-150x120.jpg" align ="left"></a>经过18个月的贸易激战，中美双方终于在12月13日同时宣布，双方达成了第一阶段的贸易协议。美方称这是美国经济的一次“巨大胜利”，而中方的表态就很模糊诡异。就在签订协议之前的12月9日至13日，五天内习近平提拔了近200名少将、中将和上将。究竟习近平是如何让中共利益集团同意签订协议的？接下来习近平将面临什么挑战？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726443.md#1" target="_blank">A股2000上市公司 大股东减持数千亿</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726443.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1602201826042403-150x120.jpg" align ="left"></a>今年以来，A股上市公司重要股东减持公告发布次数和净减持额都创新高，涉及众多行业的大约2000家上市公司。今年A股公司整体经营状况不佳、业绩惨淡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 3:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726421.md#1" target="_blank">两年销售6亿 湖北“神奇水”背后的魔爪</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-2-3-150x120.gif" align ="left"></a>大陆市面流传一款声称能医百病的“神奇水”，短短两年，销售额超6亿元（人民币，下同）。但“神奇水”实际是普通地下水加了盐，幕后推手实为安徽传销组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726227.md#1" target="_blank">习近平见林郑 中共政法委头目罕见参加</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726227.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/xjp-linzheng-150x120.jpg" align ="left"></a>习近平会见来京述职的香港特首时，主管中共公安、武警部队的政法委书记罕见出席。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726464.md#1" target="_blank">思科赢得假货诉讼案 四中企败诉 资产冻结</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726464.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Cisco_Systems_Headquarters_Building_10_Cisco_San_Jose_Main_Campus-150x120.jpg" align ="left"></a>美国思科系统公司（Cisco Systems）赢得了一起关键网络设备假冒品的法律诉讼。此案所涉及的4家伪造思科收发器中国公司败诉。公司资产被冻结。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 1:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726358.md#1" target="_blank">华日贸谈报导不实 遭美两部门罕见批评</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Screen-Shot-2019-12-16-at-11.31.30-AM-150x120.png" align ="left"></a>中美双方上周宣布达成原则性的第一阶段贸易协议，美国政府周日（12月15日）罕见刊发声明批评、引述消息人士不实报导的美媒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 1:00 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725780.md#1" target="_blank">汉翔17日与洛马签约 推台为F16亚太维修中心</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725780.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4f7d88f4e9fcd478f0a728abf37a0da5-150x120.jpg" align ="left"></a>中华民国空军正将现有144架F-16A/B升级为F-16V（Block20），并向美国采购66架全新F-16V（Block70），合计达到210架，成为亚太国家当中拥有F-16战机数量最多的国家；汉翔17日将与美商洛克希德马丁公司签署策略联盟合作协议，推动台湾成立F-16战机的亚太维修中心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725983.md#1" target="_blank">中共打压波特王 蔡英文：台湾社会难接受</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725983.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/015ef1b5590fd87cffa9b6ebfb7fb932-150x120.png" align ="left"></a>网路名人“波特王”与中华民国总统蔡英文拍片遭中国厂商解约，总统蔡英文16日表示遗憾，她强调这件事是台湾社会难以接受的事情，台湾是自由民主的社会，可以自由创作，称台湾总统也是非常自然的事情，若连这样都不行，与台湾社会所珍惜的自由民主价值是很大的违背。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725824.md#1" target="_blank">日本无印良品输官司 专家提醒投资中国风险</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725824.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e1151e1e2e3968_ttl7daylru_DSC_04851-150x120.jpg" align ="left"></a>日本无印良品遭中国山寨版无印良品状告侵权，无印良品上诉失败须赔偿原告（北京无印良品）人民币62.6万元。台湾智财专家提醒，在大陆经商智慧财产和营业秘密没有保障，投资中国需注意风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726093.md#1" target="_blank">猪肉催生河南新首富 身家超千亿</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726093.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/6b9e95008a2b06c4626f19d9e5e56c0a-150x120.jpg" align ="left"></a>受非洲猪瘟疫情影响，中国大陆猪肉价格暴涨，秦英林凭借牧原股份的股价大涨，不仅在2019年晋升河南首富，其家族财富更是在福布斯内地富豪榜上，反超王健林、李彦宏、雷军等众多商界大佬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726050.md#1" target="_blank">【十字路口】台大选倒计时 这些暗招或出现</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726050.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e0d8d1b3dfd46e_ttl7dayXPE_20191216-____-DJY-150x120.jpg" align ="left"></a>根据以往经验，往往越靠近投票日，越可能出现一些选举“暗招”，或者台湾人说的“奥步”，来试图扰乱选情、干预选举结果。特别是今年中共对台湾大选的渗透干预相当全面而且用力，所以虽然现在三组总统候选人的民调差距相当大，但是台湾的朋友还是不能掉以轻心，不能排除这些选举“奥步”可能会发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723774.md#1" target="_blank">莫雷第二？英超球星声援新疆 央视停转播惹议</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723774.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1192154826-150x120.jpg" align ="left"></a>星期五(12月13日)德国足球明星梅苏特·厄齐尔（Mesut ?zil）在社交媒体发声，抗议中共迫害新家维吾尔人，这随机引起了中共媒体的“口诛笔伐”，对其的“愤怒声讨”不亚于针对NBA教练莫雷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:08 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724810.md#1" target="_blank">【翻墙必看】中共将性暴虐输出到香港</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724810.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911282238292188-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.从港警施暴丑闻看中共输出性暴力
-数月来，香港警察对年轻抗争者实施性暴力的丑闻不断被曝光，令港民震怒，同时，人们开始关注大陆公安武警进入港警队伍，将中共性暴力镇压民众的手段输出到香港。
-
-2.北京建了大量廉价公寓楼 为何多数无人问津
-中共目前仍然无法解决社会福利住房危机。北京虽然也建起了大量的廉价公寓，但.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 10:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724943.md#1" target="_blank">欠债百亿 汇源果汁面临退市</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724943.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-82640395-150x120.jpg" align ="left"></a>大陆汇源果汁因违规2018年被港交所宣布停牌，如果到明年1月31日前没有完成复牌条件，将被启动下市程序。而目前汇源果汁已经欠债百亿元人民币，其前景堪忧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:21 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725629.md#1" target="_blank">路透社曝最大客户路孚特屈从中共 封锁新闻</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725629.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-74125130-150x120.jpg" align ="left"></a>路透社指控其母公司持有股权的、也是该社最大客户的金融讯息供应商路孚特（Refinitiv）屈从中共的压力，将大量与香港反送中抗争和六四事件有关的新闻封锁，使其无法进入中国大陆境内。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725212.md#1" target="_blank">天津权健董事长束昱辉等12人一审开庭</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725212.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/quanjian-150x120.jpg" align ="left"></a>12月16日，天津权健自然医学科技发展有限公司（下称权健集团）董事长束昱辉等12人组织、领导传销活动一案开审，被告均当庭表示认罪。此案择期宣判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:20 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724964.md#1" target="_blank">美中第一阶段协议 强制执行机制如何运作</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724964.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/000_1GC5E8-150x120.jpg" align ="left"></a>美中贸易战历时一年半后达成第一阶段贸易协议，川普（特朗普）总统表示这是一项很大的第一阶段协议，迈出巨大的第一步。美方认为，若中方不守诺，美方在括强制执行机制下，可做成回应，包括用关税回应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:57 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725505.md#1" target="_blank">专访港大校友团麦东荣：访英的三个目的</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725505.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5-1-150x120.jpeg" align ="left"></a>香港大学校友关注组副召集人麦东荣向大纪元记者讲述了他们一行人此次访英的三个目的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:38 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727172.md#1" target="_blank">每日三退声明精选（2019/12/16）</a><br></h3>看透中共邪教了。法轮功学员根本就没做错什么啊，就这么对待别人。看到整个共产邪教根本就是想着如何灭掉别人的自由，很邪恶，决定在这里公开退出共匪党团队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727111.md#1" target="_blank">贵州发生煤矿事故 致14人死亡2人被困</a><br></h3>据陆媒报导，12月17日1时30分许，贵州安龙县广隆煤矿发生一起煤与瓦斯突出事故。经初步核实，当班井下作业人员23人，7人安全升井。截至9时，事故造成14人死亡，2人被困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727038.md#1" target="_blank">港人乘穿梭巴士往澳门 被珠海公安带走</a><br></h3>大陆公安证实一名本港男子，上周五乘坐前往澳门的港珠澳大桥穿梭巴士，在东人工岛被公安带走，声称其涉及7年前的手机走私案。民主党立法会议员涂谨申，批评大陆擅自在东人工岛设置检查站，犹如设新“送中”陷阱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726385.md#1" target="_blank">武汉78岁法轮功学员汪文清面临非法起诉</a><br></h3>11月22日，武汉市黄陂区姚集派出所警察闯入78岁法轮功学员汪文清的家，要求他在事先打印好的所谓“笔录”上签字，企图非法起诉他，汪文清拒签。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725870.md#1" target="_blank">河南高速现多起事故 5人惊慌逃生坠桥死亡</a><br></h3>12月15日晚上7时许，因雨雪天气，河南省三门峡市连霍高速K795连续发生多起交通事故，5名司乘人员惊慌中逃生，翻越墙式护栏意外坠桥死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 7:47 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725738.md#1" target="_blank">中共军工专家李守泽突然去世 引关注</a><br></h3>日前，现年58岁的中共军工企业、中航飞机股份有限公司（下称中航飞机）副总经理李守泽去世，引外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725328.md#1" target="_blank">湖南新晃县一中操场埋尸案明日开审</a><br></h3>曾轰动一时的湖南新晃县一中“操场埋尸案”，明日（12月17日）将公开庭审。嫌疑人杜少平被指控犯故意杀人罪、故意伤害罪、寻衅滋事罪、非法拘禁罪、聚众斗殴罪、强迫交易罪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nhrnni253/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nhrnni253/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
